fix vertical alignment of inputs

--- a/app/assets/stylesheets/pure_admin/forms.css.scss
+++ b/app/assets/stylesheets/pure_admin/forms.css.scss
@@ -43,7 +43,7 @@
     }
 
     label:not(.addon-label) {
-      line-height: 1.5em;
+      line-height: 2.4em;
       margin-bottom: 0;
 
       @media (min-width: 35.5em) {
